# spin-reason-c-bindings

./: README.md  spin
example/: README.md  demo.opam  dune-project  esy.json
example/esy.lock/: index.json
example/lib/: bindings.re  demo.re  demo.rei  dune
example/lib/stubs/: demo_stubs.re  dune  gen_stubs.re
template/: dune-project  {{ project_slug }}.opam
